--- a/questions/questions.css
+++ b/questions/questions.css
@@ -18,7 +18,7 @@ body, body * {
 
 @font-face {
     font-family: Signika Negative;
-    src: url(assets/Signika_Negative/SignikaNegative-VariableFont_wght.ttf);
+    src: url(../assets/Signika_Negative/SignikaNegative-VariableFont_wght.ttf);
 }
 
 body {
@@ -70,7 +70,6 @@ body, .timer, .quiz-container, .question {
 
 /* ---------- Question container ---------- */
 .quiz-container {
-    background: var(--background-color);
     position: absolute;
     bottom: 3.5%;
     left: 5%;
@@ -78,20 +77,30 @@ body, .timer, .quiz-container, .question {
     height: 65%;
 }
 
-.quiz1 {
+.quiz1, .quiz2, .quiz3, .quiz4 {
     width: 90%;
     height: 100%;
     overflow: hidden;
 }
 
+.quiz2 .question, .quiz3 .question {
+    align-items: flex-end;
+}
+
 .question {
-    width: 100%;
-    height: 40%;
-    margin: 5% 0;
-    background: url(assets/img/test1_img.jpg) no-repeat;
-    background-size: cover;
-    color: var(--text-color1);
+    height: 35%;
     font-size: 5vw;
-    align-items: stretch;
+}
+.question, .answer, .next, .next a {
+    width: 100%;
+    margin-bottom: 5%;
     text-align: center;
+    color: var(--text-color2);
+    border-radius: 10px;
+}
+.answer, .next, .next a {
+    background: var(--background-color);
+    padding: 10px;
+    font-size: 4vw;
+    cursor: pointer;
 }
