--- a/questions/questions.css
+++ b/questions/questions.css
@@ -121,3 +121,39 @@ body, .timer, .quiz-container, .question {
     color: var(--background-color);
     transform: scale(1.2);
 }
+
+/* ---------- Trying to adjust width and display ---------- */                
+@media screen and (min-width: 250px) {
+    .caution {
+        display: none;
+    }
+}
+
+@media screen and (min-width: 511px) {
+    .container {
+        width: 400px;
+    }
+
+    .intro, .question {
+        font-size: 22.25px;
+    }
+
+    .answer, .next a {
+        font-size: 16px;
+    }
+}
+
+@media screen and (min-width: 930px) {
+    .container {
+        display: none;
+    }
+
+    .caution {
+        display: block;
+        width: 80%;
+        text-align: center;
+        margin: 20% auto;
+        color: var(--text-color2);
+        font-size: var(--text-font-size);
+    }
+}
