--- a/smarty.css
+++ b/smarty.css
@@ -98,6 +98,7 @@ body, .timer, .quiz-container, .question {
     width: 100%;
     height: 10vh;
     display: flex;
+    justify-content: center;
     align-items: center;
     font-size: var(--smaller-font-size);
     padding: 10px;
@@ -115,7 +116,7 @@ body, .timer, .quiz-container, .question {
     background: var(--background-color);
     color: var(--text-color2);
     padding: 30px;
-    border-radius: 40%;
+    border-radius: 50%;
     position: absolute;
     bottom: 10%;
     left: 30%;
